<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:id="@+id/constraintLayout_mainCheck"
    android:background="@drawable/add_layout_border">

    <!-- 일정 추가 텍스트 android:background="@drawable/rounded_background"-->
    <TextView
        android:id="@+id/textview_mainCheck_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:text="@string/info_main_title"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center" />

    <!-- 내용 입력 -->
    <TextView
        android:id="@+id/textview_mainCheck_input"
        app:layout_constraintTop_toBottomOf="@+id/textview_mainCheck_title"
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginTop="10dp"
        android:hint="@string/info_main_edit"
        android:textSize="18sp"
        android:textColor="@color/black"
        android:background="@android:drawable/editbox_background_normal"/>

    <LinearLayout
        android:id="@+id/linearLayout_mainCheck_dateLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@+id/textview_mainCheck_input">

        <!-- 선택된 날짜 표시 TextView -->
        <TextView
            android:id="@+id/textview_mainCheck_selectedDate"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:text="@string/info_main_selected_date"
            android:textSize="16sp"
            android:textColor="@color/black"
            android:layout_marginTop="8dp"
            android:gravity="center" />
    </LinearLayout>

    <!-- 날짜 선택 버튼 -->
    <Button
        android:id="@+id/button_mainAdd_deleteData"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_mainCheck_dateLine"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/info_main_delete"
        android:textSize = "18sp"
        android:textColor="@color/black"
        android:layout_marginTop="18dp"
        android:background="@drawable/bottomsheet_deletebutton_background"/>

    <!-- 저장 버튼 -->
    <!--<Button
        android:id="@+id/MainDateInfoUpdateButton"
        app:layout_constraintTop_toBottomOf="@id/MainDateInfoDeleteAndDateLinear"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="수정"
        android:textSize="18dp"
        android:layout_marginTop="16dp"
        android:background="@drawable/rounded_button"/>
    -->


</androidx.constraintlayout.widget.ConstraintLayout>