<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:background="@drawable/add_layout_border">

    <!-- 날씨 선택 텍스트 -->
    <TextView
        android:id="@+id/textview_weatherAdd_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_weather_title"
        android:textColor="@color/black"
        android:textSize="18sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="135dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- 날씨 선택 버튼들 (GridLayout) -->
    <GridLayout
        android:id="@+id/gridLayout_weatherAdd_selectWeather"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:columnCount="3"
        android:rowCount="2"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintTop_toBottomOf="@id/textview_weatherAdd_title"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <!-- 날씨 아이콘 버튼들 -->
        <ImageButton
            android:contentDescription="@string/item_weather_contentDescription"
            android:id="@+id/imageButton_weatherAdd_Icon_Sun"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:background="@drawable/bottomsheet_button_background"
            android:src="@drawable/weather_sun_icon"
            android:scaleType="fitCenter"
            android:padding="8dp" />

        <ImageButton
            android:contentDescription="@string/item_weather_contentDescription"
            android:id="@+id/imageButton_weatherAdd_Icon_Cloud"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:background="@drawable/bottomsheet_button_background"
            android:src="@drawable/weather_suncloud_icon"
            android:scaleType="fitCenter"
            android:padding="8dp" />

        <ImageButton
            android:contentDescription="@string/item_weather_contentDescription"
            android:id="@+id/imageButton_weatherAdd_Icon_Rain"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:background="@drawable/bottomsheet_button_background"
            android:src="@drawable/weather_rain_icon"
            android:scaleType="fitCenter"
            android:padding="8dp" />

        <ImageButton
            android:contentDescription="@string/item_weather_contentDescription"
            android:id="@+id/imageButton_weatherAdd_Icon_Thunder"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:background="@drawable/bottomsheet_button_background"
            android:src="@drawable/weather_thunder_icon"
            android:scaleType="fitCenter"
            android:padding="8dp" />

        <ImageButton
            android:contentDescription="@string/item_weather_contentDescription"
            android:id="@+id/imageButton_weatherAdd_Icon_Show"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:background="@drawable/bottomsheet_button_background"
            android:src="@drawable/weather_snow_icon"
            android:scaleType="fitCenter"
            android:padding="8dp" />

        <ImageButton
            android:contentDescription="@string/item_weather_contentDescription"
            android:id="@+id/imageButton_weatherAdd_Icon_SunCloud"
            android:layout_width="0dp"
            android:layout_height="40dp"
            android:layout_columnWeight="1"
            android:layout_margin="4dp"
            android:background="@drawable/bottomsheet_button_background"
            android:src="@drawable/weather_cloud_icon"
            android:scaleType="fitCenter"
            android:padding="8dp" />
    </GridLayout>

    <!-- 시간 선택 텍스트 -->
    <TextView
        android:id="@+id/textview_weatherAdd_timeText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_weather_time_notice"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/gridLayout_weatherAdd_selectWeather"
        app:layout_constraintStart_toStartOf="parent" />
    <!-- 시간 선택 버튼들 (수평 LinearLayout) -->
    <LinearLayout
        android:id="@+id/linearLayout_weatherAdd_selectTime"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginBottom="16dp"
        android:layout_marginTop="8dp"
        app:layout_constraintTop_toBottomOf="@id/textview_weatherAdd_timeText"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <Button

            android:id="@+id/button_weatherAdd_dayBefore"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/bottomsheet_button_background"
            android:text="@string/add_weather_time_before" />

        <Button
            android:id="@+id/button_weatherAdd_timeNow"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/bottomsheet_button_background"
            android:text="@string/add_weather_time_now" />

        <Button
            android:id="@+id/button_weatherAdd_allDay"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_margin="4dp"
            android:background="@drawable/bottomsheet_button_background"
            android:text="@string/add_weather_time_today" />
    </LinearLayout>

    <!-- 내용 입력 텍스트 -->
    <TextView
        android:id="@+id/textview_weatherAdd_textTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/add_weather_text_notice"
        android:textColor="@color/black"
        android:textSize="16sp"
        android:layout_marginBottom="8dp"
        android:layout_marginTop="8dp"
        android:layout_marginStart="4dp"
        app:layout_constraintTop_toBottomOf="@id/linearLayout_weatherAdd_selectTime"
        app:layout_constraintStart_toStartOf="parent" />

    <!-- 내용 입력 (EditText) -->
    <EditText
        android:importantForAutofill="no"
        android:inputType="text"
        android:id="@+id/edittext_weatherAdd_inputText"
        android:layout_width="0dp"
        android:layout_height="50dp"
        android:background="@android:drawable/editbox_background_normal"
        android:gravity="top|start"
        android:hint="@string/add_weather_text_hint"
        android:minHeight="100dp"
        android:padding="8dp"
        android:layout_marginTop="8dp"
        android:singleLine="true"
        android:imeOptions="flagNoExtractUi"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/textview_weatherAdd_textTitle" />

    <Button
        android:id="@+id/button_weatherAdd_saveData"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="16dp"
        android:background="@drawable/bottomsheet_button_background"
        android:text="@string/add_weather_save"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/edittext_weatherAdd_inputText" />

</androidx.constraintlayout.widget.ConstraintLayout>
