<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="horizontal">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintlayout_weatherListItem_layoutBox"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/item_border_shape"
        android:padding="16dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <LinearLayout
            android:id="@+id/linearLayout_weatherListItem"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent">

            <TextView
                android:id="@+id/textview_weatherItem_text"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_weight="3"
                android:text="@string/item_weather_title"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <FrameLayout
                android:id="@+id/frameLayout_weatherItem_iconFrame"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="8dp"
                android:layout_weight="1"
                android:gravity="center">

                <ImageView
                    android:contentDescription="@string/item_weather_contentDescription"
                    android:id="@+id/imageview_weatherItem_selectedWeatherIcon"
                    android:layout_width="40dp"
                    android:layout_height="40dp"
                    android:src="@drawable/weather_snow_icon"
                    android:padding="2dp"/>
            </FrameLayout>

            <TextView
                android:id="@+id/textview_weatherItem_selectedTime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:layout_marginStart="8dp"
                android:layout_weight="2.1"
                android:text="@string/item_weather_time"
                android:textColor="@color/black"
                android:textSize="16sp" />

            <Button
                android:id="@+id/button_weatherItem_delete"
                android:layout_width="0dp"
                android:layout_height="29dp"
                android:layout_marginStart="8dp"
                android:layout_marginTop="8dp"
                android:layout_weight="1"
                android:background="@drawable/item_delete_button_border"
                android:foreground="?attr/selectableItemBackground"
                android:text="@string/item_weather_delete" />
        </LinearLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="5dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/constraintlayout_weatherListItem_layoutBox"/>

</androidx.constraintlayout.widget.ConstraintLayout>