<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="16dp"
    android:id="@+id/constraintLayout_checklist"
    android:background="@drawable/add_layout_border">

    <!-- 일정 추가 텍스트 android:background="@drawable/rounded_background"-->
    <TextView
        android:id="@+id/textview_checklist_title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="5dp"
        android:text="@string/add_checklist_title"
        android:textSize="20sp"
        android:textColor="@color/black"
        android:gravity="center" />

    <!-- 날짜 선택 버튼 -->

    <EditText
        android:importantForAutofill="no"
        android:inputType="text"
        android:id="@+id/edittext_checklist_input"
        android:layout_width="match_parent"
        android:layout_height="65dp"
        android:layout_marginTop="36dp"
        android:hint="@string/add_checklist_edit_hint"
        android:background="@android:drawable/editbox_background_normal"
        android:singleLine="true"
        android:imeOptions="flagNoExtractUi"
        app:layout_constraintTop_toBottomOf="@id/textview_checklist_title"
        tools:layout_editor_absoluteX="-5dp" />

    <!-- 저장 버튼 -->
    <Spinner
        android:id="@+id/spinner_checklist_periodDefault"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="36dp"
        app:layout_constraintTop_toBottomOf="@id/edittext_checklist_input"
        tools:layout_editor_absoluteX="-47dp"
        />

    <!-- 요일 선택 Spinner (매주일 경우) -->
    <Spinner
        android:id="@+id/spinner_checklist_periodWeek"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_checklist_periodDefault"
        android:visibility="gone" /> <!-- 기본 숨김 -->

    <!-- 날짜 선택 Spinner (매월일 경우) -->
    <Spinner
        android:id="@+id/spinner_checklist_periodMonth"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="12dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_checklist_periodDefault"
        android:visibility="gone" /> <!-- 기본 숨김 -->

    <Button
        android:id="@+id/button_checklist_saveData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/bottomsheet_button_background"
        android:text="@string/add_checklist_save"
        android:textSize="18sp"
        tools:layout_editor_absoluteX="20dp"
        tools:layout_editor_absoluteY="282dp"
        android:layout_marginTop="48dp"
        app:layout_constraintTop_toBottomOf="@id/spinner_checklist_periodMonth"/>


</androidx.constraintlayout.widget.ConstraintLayout>